<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />-->
    <item android:id="@+id/action_takePicture" android:title="@string/btn_takePicture"
        android:orderInCategory="1" app:showAsAction="never" />
    <item android:id="@+id/action_choosePhoto" android:title="@string/action_choosePhoto"
        android:orderInCategory="2" app:showAsAction="never" />
    <item android:id="@+id/action_cleanStorage" android:title="@string/action_cleanStorage"
        android:orderInCategory="3" app:showAsAction="never" />
</menu>
