<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <FrameLayout
        android:id="@+id/camera_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"/>


    <RelativeLayout
        android:id="@+id/input_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/info_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setPicture"
            android:layout_centerVertical="true"
            android:textSize="15pt"/>

        <Button
            android:id="@+id/button_calculate"
            android:text="OK"
            android:layout_toLeftOf="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/btn_clear"/>

        <Button
            android:id="@+id/button_takePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:visibility="gone"
            android:text="@string/btn_takePicture"/>

        </RelativeLayout>

</LinearLayout>